--- a/custom.css
+++ b/custom.css
@@ -13,6 +13,7 @@ h1 {
   background-clip: text;
   -webkit-animation: colorRotate 8s ease-in-out 0s infinite;
   padding-bottom: 8px;
+  -webkit-text-stroke: 0.5px black;
 }
 
 @keyframes h1 {
@@ -26,16 +27,14 @@ h1 {
 }
 
 span {
-  background: linear-gradient(to right, #ffffff, #0099ff , #00ff00, #ff3399, #6666ff);
     -webkit-background-clip: text;
     background-clip: text;
     color: transparent;
     animation: span 6s ease-in-out infinite;
     background-size: 400% 100%;
     text-shadow: 0px 0px 1px #ffffff;
-    padding-bottom: 0px;
-    padding-right: 4px;
     margin-top: 2px;
+    -webkit-text-stroke: 0.2px rgb(255, 0, 208);
 }
 
 img::before {
@@ -80,6 +79,7 @@ a {
   background-clip: text;
   background-size: 10px 20px;
   -webkit-animation: colorRotate 8s ease-in-out 0s infinite;
+  -webkit-text-stroke: 0.5px black;
 }
 
 @keyframes nav {
@@ -93,7 +93,7 @@ a {
 }
 
 code {
-  filter: drop-shadow(0px 2px 2px #00000080);
+  filter: drop-shadow(0px 0px 1px #00000080);
   -webkit-background-clip: text;
   background-clip: text;
   background-size: 10px 20px;
@@ -101,16 +101,6 @@ code {
   text-shadow: 1px 1px 1px #fff5fa;
 }
 
-header::before {
-  content: "";
-  background: linear-gradient(to right, #ffffff, #0099ff , #00ff00, #ff3399, #6666ff);
-  -webkit-animation: colorRotate 8s ease-in-out 0s infinite;
-  position: fixed;
-  height: 60%;
-  width: 90%;
-  z-index: -1;
-  filter: blur(5px);
-}
 
 header {
   filter: drop-shadow(0px 2px 2px #f87dff);
@@ -119,6 +109,7 @@ header {
   background-size: 10px 20px;
   -webkit-animation: colorRotate 8s ease-in-out 0s infinite;
   text-shadow: 1px 1px 1px #ff99cc;
+  -webkit-text-stroke: 1px black;
 }
 
 header::after {
@@ -128,23 +119,23 @@ header::after {
 @keyframes colorRotate {
   from {
     color: #6666ff;
-    text-shadow: 1px 1px 8px #6666ff;
+    text-shadow: 0px 0px 1px #6666ff;
   }
   10% {
     color: #0099ff;
-    text-shadow: 1px 1px 9px #0099ff;
+    text-shadow: 0px 0px 1px #0099ff;
   }
   50% {
     color: #00ff00;
-    text-shadow: 1px 1px 3px #00ff00;
+    text-shadow: 0px 0px 1px #00ff00;
   }
   75% {
     color: #ff3399;
-    text-shadow: 1px 1px 3px #ff3399;
+    text-shadow: 0px 0px 1px #ff3399;
   }
   100% {
     color: #6666ff;
-    text-shadow: 1px 1px 8px #6666ff;
+    text-shadow: 0px 0px 1px #6666ff;
   }
 }
 
