--- a/custom.css
+++ b/custom.css
@@ -12,34 +12,19 @@ span {
     background-clip: text;
     color: transparent;
     animation: span 6s ease-in-out infinite;
-    background-size: 400% 100%;
     text-shadow: 0px 0px 1px #ffffff;
-    margin-top: 2px;
     -webkit-animation: colorRotate 8s ease-in-out 0s infinite;
-    -webkit-text-stroke: 0.1px rgb(0, 0, 0);
+    -webkit-text-stroke: 0.2px rgb(180, 180, 180);
 }
 
 svg {
-  filter: drop-shadow(0px 0px 2px #ffffffFF);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-animation: colorRotate 8s ease-in-out 0s infinite;
-}
-
-a {
-  filter: drop-shadow(0px 0px 1px rgb(0, 0, 0));
-  -webkit-background-clip: text;
-  background-clip: text;
-  background-size: 10px 20px;
-  -webkit-animation: colorRotate 8s ease-in-out 0s infinite;
-  -webkit-text-stroke: 0.5px black;
+  filter: drop-shadow(0px 0px 2px rgba(255, 255, 255, 0.668));
 }
 
 code {
   filter: drop-shadow(0px 0px 1px #00000080);
   -webkit-background-clip: text;
   background-clip: text;
-  background-size: 10px 20px;
   -webkit-animation: colorRotate 8s ease-in-out 0s infinite;
   text-shadow: 1px 1px 1px #fff5fa;
 }
@@ -48,9 +33,7 @@ header {
   filter: drop-shadow(0px 2px 2px #f87dff);
   -webkit-background-clip: text;
   background-clip: text;
-  background-size: 10px 20px;
   -webkit-animation: colorRotate 8s ease-in-out 0s infinite;
-  text-shadow: 1px 1px 1px #ff99cc;
   -webkit-text-stroke: 1px black;
 }
 
@@ -78,8 +61,5 @@ header {
 }
 
 form { 
-  -webkit-background-clip: text;
-  background-clip: text;
-  background-size: 10px 20px;
   -webkit-animation: colorRotate 8s ease-in-out 0s infinite;
 }
